# grantsmith

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: rule-mining.md
examples/: README.md  sample_settings.json
examples/transcripts/: session-9f2c41aa.jsonl  session-b81d7c33.jsonl  session-e4a9160b.jsonl
scripts/: smoke.sh
src/grantsmith/: __init__.py  __main__.py  cli.py  errors.py  mining.py  model.py  normalize.py  pipeline.py  report.py  risk.py  rules.py  settings.py  shellparse.py  transcript.py
tests/: conftest.py  test_cli.py  test_examples.py  test_mining.py  test_normalize.py  test_pipeline.py  test_report.py  test_risk.py  test_rules.py  test_settings.py  test_shellparse.py  test_transcript.py
